[css-grid] Fix painting of grid items with overflowing contents

On Grid Layout we've an optimization on the painting code,
to avoid painting the whole grid. We look for the dirtied grid areas
and paint only the items on those areas.
At the same time we keep a list of the items overflowing its area,
and we paint them too.

The problem found on the bug is that the item is not overflowing
the grid area, but the contents of the item are overflowing it.
We were using FrameRect() to check this, which returns
the size of the item, but we need to check also
the overflowing contents, so the patch changes FrameRect() by
VisualOverflowRect().
That way the items with overflowing contents are always painted.

On the test we need 2 tracks, because of how
GridPainter::DirtiedGridAreas() is implemented.
It's using std::upper_bound() which returns the last element
if none of them is greater than the one passed.
This makes that the items on the last cell are painted
even in the cases fixed by this patch,
as the last cell is considered to be dirty in those situations.

BUG=800386
TEST=fast/css-grid-layout/grid-painting-item-overflow.html

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I59521880207b75a5541a0e0c25e214d309e90661